build custom jre with alpine base-image to reduce size; move all objects to unique-id-generator namespace