@@ -1,6 +1,29 @@
-FROM openjdk:17-jdk-alpine
-LABEL authors="Archit"
-WORKDIR /app
-COPY target/unique-id-generator-0.0.1-SNAPSHOT.jar unique-id-generator-0.0.1-SNAPSHOT.jar
-ENTRYPOINT ["java","-jar","/app/unique-id-generator-0.0.1-SNAPSHOT.jar"]
+FROM maven:3-eclipse-temurin-17 AS build
+RUN mkdir /usr/src/project
+COPY . /usr/src/project
+WORKDIR /usr/src/project
+RUN mvn package -DskipTests
+RUN jar xf target/unique-id-generator-0.0.1-SNAPSHOT.jar
+RUN jdeps --ignore-missing-deps -q  \
+    --recursive  \
+    --multi-release 17  \
+    --print-module-deps  \
+    --class-path 'BOOT-INF/lib/*'  \
+    target/unique-id-generator-0.0.1-SNAPSHOT.jar > deps.info
+RUN jlink \
+    --add-modules $(cat deps.info) \
+    --strip-debug \
+    --compress 2 \
+    --no-header-files \
+    --no-man-pages \
+    --output /myjre
+
+FROM alpine:latest
+ENV JAVA_HOME=/user/java/jdk17
+ENV PATH=$JAVA_HOME/bin:$PATH
+COPY --from=build /myjre $JAVA_HOME
+RUN mkdir /project
+COPY --from=build /usr/src/project/target/unique-id-generator-0.0.1-SNAPSHOT.jar /project/
+WORKDIR /project
+ENTRYPOINT ["java", "-jar", "unique-id-generator-0.0.1-SNAPSHOT.jar"]
 EXPOSE 8080
